--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,9 @@
 <h1>Contact Me</h1>
-<p>Tel: +123456789</p>
-<p>Email: me@gmail.com</p>
+<p>Tel: +3023799512</p>
+<p>Email: jenkinsbtyler@gmail.com</p>
 <p>Address:</p>
 <p>
-  123 North Street<br />
-  Some City<br />
-  Some Country <br />
+  540 39th Street<br />
+  Oakland CA<br />
+  United States <br />
 </p>
